# pico-sdk

./: .gitignore  .gitmodules  LICENSE  Makefile  QUICKSTART.md  README.md  test-all.sh
docker/: Dockerfile  Makefile  README.md  build.sh  init-freertos.sh  init-zephyr.sh  pico-init.sh  zephyr-init.sh
scripts/: build.sh  init-freertos.sh  init-zephyr.sh
test/: CMakeLists.txt  build.sh  main.c
